Adding text to main MS.
Added stan_glmer models.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -730,6 +730,29 @@ Genetic evolution may have been driven by cultural innovations during the emerge
 	file = {Full Text PDF:/Users/hagen/Zotero/storage/5U887QUP/Shultz et al. - 2012 - Hominin cognitive evolution identifying patterns .pdf:application/pdf;Snapshot:/Users/hagen/Zotero/storage/8X9ZCXEN/2130.html:text/html}
 }
 
+
+@article{yanca_female_2004,
+	title = {Female allies and female power {A} cross-cultural analysis},
+	volume = {25},
+	journal = {Evolution and Human Behavior},
+	author = {Yanca, C. and Low, B. S.},
+	year = {2004},
+	keywords = {Mel's UCARE 1},
+	pages = {9--23},
+	annote = {The following values have no corresponding Zotero field:number: 1publisher: Elsevierissn: coden: doi: citation-id: Yanca 2004modified-date: 2017-08-24 09:30:15 +0700},
+	file = {Female%20allies%20and%20female%20power:/Users/zgarf/Zotero/storage/A6B8IV4R/Female allies and female power.pdf:application/pdf}
+}
+
+
+@book{sanday_female_1981,
+	title = {Female power and male dominance: {On} the origins of sexual inequality},
+	publisher = {Cambridge Univ Pr},
+	author = {Sanday, P. R.},
+	year = {1981},
+	keywords = {ANTH 477, Hunters and Gatherers, UCARE 1, Mel's UCARE 1},
+	annote = {The following values have no corresponding Zotero field:issn: coden: doi: electronic-resource-num: citation-id: Sanday 1981modified-date: 2014-05-09 21:38:53 +0700}
+}
+
 @article{stout_stone_2012,
 	title = {Stone tools, language and the brain in human evolution},
 	volume = {367},
@@ -4488,6 +4511,16 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	keywords = {ANTH 564, Cooperation/Social Behvior, HBE, Intelligence 2, MA\_leadership, prelims, SES},
 	pages = {10--46},
 	file = {Ecological%20dominance,%20social%20c:/Users/hagen/Zotero/storage/464NWC8E/Ecological dominance, social c.pdf:application/pdf}
+}
+
+
+@book{whyte_status_1978,
+	title = {The status of women in preindustrial societies},
+	publisher = {Princeton University Press},
+	author = {Whyte, M. K.},
+	year = {1978},
+	keywords = {Mel's UCARE 1, Status, Mel's ANTH 412 paper, UCARE},
+	annote = {The following values have no corresponding Zotero field:issn: coden: doi: electronic-resource-num: citation-id: Whyte 1978modified-date: 2016-10-05 02:53:07 +0700}
 }
 
 @article{flinn_hormonal_2012,
