--- a/Response to reviewers.Rmd
+++ b/Response to reviewers.Rmd
@@ -43,7 +43,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 **This manuscript presents a descriptive analysis of the HRAF to provide information about leadership in traditional societies. Overall, I enjoyed reading the paper and thought it was a useful resource. It provides a comprehensive analysis of leadership across a wide swath of traditional cultures. It reports on the types of functions leaders serve, the qualities possessed by leaders, and the costs and benefits of leadership experienced by both leaders and followers. The paper will likely be of interest to anyone working in the area of leadership, social hierarchy, or group behavior. I provide some comments below aimed at helping the authors increase the potential accessibility and impact of the work.** 
 
-We greatly appreciate the reviewers detailed comments and very useful suggestions. 
+We greatly appreciate the detailed comments and very useful suggestions. 
 
 **The paper was framed partially as providing an analysis of differences between traditional societies and WEIRD societies but, unless I missed it, there was not much analysis along these lines. Neither the background section nor the Discussion section focuses much on contrasting WEIRD and traditional societies. The paper appears to miss out on a useful opportunity to provide some commentary on this issue. Also, I realize the paper is decidedly exploratory/descriptive, but did the authors have any hypotheses about differences between WEIRD and traditional societies?** 
 We agree our initial submisson did not sufficently accomplish this goal. We have now added summarizing, concluding statements on the qualities and functions of leaders in WEIRD and non-WEIRD settings in the introduction. 
@@ -66,9 +66,7 @@ We also include additional details in the results and supplimentary information 
 
 **I don't work with ethnographic data, so perhaps this question is naïve, but: What conclusions can we draw about the actual frequency of leadership functions and traits from the frequency with which they are mentioned in the ethnographic record? There is an implicit assumption that the two are closely aligned. Has such an alignment been confirmed? Is that even testable?**
 
-The reviewer brings up an important point. For one, this is partly our motivation for representing the percentage of cultures which provide at least one text record supporting each of the operationalized variables. Despite this low threshold for acceptign supporting evidence, the ethnogrtaphic record (sampled here) does not provide support for every variable from every culture. At this culture-level, we feel more confident our data provide a estiamte of cross-cultural frequency, albeit an inherently noisy estimation. Also, the entire field of ethnology (the branch of anthropology focused on comparing charachteristics of populations across the globe), is based on developing comparable and often quantitaive measures from primary ethnogrpahic information. For example, the Ethnographic Atlas, which provides hundreds of coded quantitaive and qualitive variables on thousands of cultures and the Standard Cross-Cultural Sample, which provides thousands of coded quantitative and qualitative variables on 186 cultures, were developed in essentially the same way we have developed our operatiopnalized variables here. Developing and contrasting coded measures from primary ethnographic documents is not without limitations, but does represent (perhaps) the only method to systematically and empirically compare measures across a large sample of cultures/populations. 
-
-At the text-record level drawing strong conclusions about the actual frequency of traits is slightly more problematic. However, fundamentally these results provide a systematic view of the ethnographic record. From these results field researchers and theoreticians can draw inference from a more comprehensive view of human culturla diversity rather than haphazardly self-selecting a few ethngoraphic cases studies. 
+The reviewer brings up an important point. For one, this is partly our motivation for representing the percentage of cultures which provide at least one text record supporting each of the operationalized variables. Despite this low threshold for accepting supporting evidence, the ethnogrtaphic record (sampled here) does not provide support for every variable from every culture. At this culture-level we feel more confident our data provide a estiamte of cross-cultural frequency, albeit an inherently noisy, "course-grained" estimation. Also, the entire field of ethnology (the branch of anthropology focused on comparing charachteristics of populations across the globe) is based on developing comparable and often quantitaive measures from primary ethnogrpahic information. For example, the Ethnographic Atlas, which provides hundreds of coded quantitaive and qualitive variables on thousands of cultures and the Standard Cross-Cultural Sample, which provides thousands of coded quantitative and qualitative variables on 186 cultures, were developed in essentially the same way we have developed our operatiopnalized variables here. Developing and contrasting coded measures from primary ethnographic documents is not without limitations, but does represent (perhaps) the only method to systematically and empirically compare measures across a large sample of cultures/populations. At the text-record level drawing strong conclusions about the actual frequency of traits is slightly more problematic. However, fundamentally these results provide a systematic view of the ethnographic record on these measures. From our results field researchers and theoreticians can draw inference from a more comprehensive view of human cultural diversity rather than haphazardly self-selecting a few ethngoraphic cases studies. 
 
 We now discuss these limitations and points more clearly in the limitations setion. NEED TO DO. 
 
@@ -80,6 +78,8 @@ In the methods section we now include a description of all levels of our *group 
 
 **The authors present results of a Herculean task of mining the ethnographic record to estimate frequency of and covariation between functions, qualities, and costs/benefits of leadership. While the study itself is exploratory, it will be very useful to future work testing models of the evolution of leadership and social inequality in general. I have a number of suggestions and comments that may improve the paper, none highly critical:**
 
+We greatly appreciate the detailed comments and very useful suggestions. 
+
 **The abstract could be tightened up in terms of description of particular costs and benefits to leaders and followers. And a brief justification in the abstract for why the study compares costs and benefits would be useful- e.g. understanding evolution of leader or follower strategies requires understanding the (fitness-relevant) costs and benefits to them.**
 
 **Lines 88-89 suggest that the paper's ethnographic analysis will include leadership at all levels of social organization. But does the theory and analysis reported in the paper really extend to all levels of social organization- such as child play groups or households? It seems the focus is still community-level cooperation among adults. Perhaps clarify.**
@@ -89,6 +89,8 @@ In the methods section we now include a description of all levels of our *group 
 **The Wofford study (lines 214-233) and GLOBE study reminds me of the vast array of descriptive models in leadership/managerial studies- transactional vs. transformational leadership and their sub-components being one of the most popular. So what should a reader make of this literature, with respect to evolution of leadership in small-scale societies? Do bureaucracies, formal legal systems, formal education-based skills, and large inequalities in remuneration limit universality of descriptive models from leadership/managerial studies? I'd be more explicit on this in the introduction. For the discussion section: how does your own descriptive modeling of leadership in traditional societies agree or not with Wofford or other models from large-scale societies?**
 
 **There is little mention of gender in the Qualities of leadership section, even though this might be first attribute an alien might recognize as covarying with community-level leadership in human societies. Even in the more egalitarian societies, men often wield more overt political influence during camp or band-wide political discussions. Without getting into arguments about patriarchy and its origins, it might at least be useful to cite your own work on Chabu and work on the Tsimane (von Rueden et al. 2018) that finds similar traits predict leadership for men and women, implying its not gender per se that gives men a leadership advantage in politics.**
+
+We now discuss sex-differences in community and political leadership, and refernce in greater deatils (albeit breif) the universal male bias in community leadership in the introuction and cite these works. 
 
 **How often are shamans also the most influential political figure (given your suggestion in line 317)? My sense from various ethnographies is that this was not the majority of cases (though often the case), whether in more egalitarian societies or chiefdoms. I could be wrong.** 
 
