--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -124,9 +124,11 @@ In sum, we seek to empirically and systematically accomplish the following four 
 
 We estimate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (doi.org/10.5281/zenodo.2541999), from which @garfield_evolutionary_2019 "tested" three theoretical models against the ethnographic record. The electronic Human Relations Area Files (eHRAF) is a digital collection of ethnographies, subject-coded at teh paragraph level following a the Outline of Cultural Materials (OCM) coding scheme. The eHRAF is a subset of the larger HRAF and is continually growing in scope. 
 
-Whereas @garfield_evolutionary_2019, documented supporting evidence for measures of leadership in reference to influential theoretical models, our goals here are to let the ethnographic record "speak for itself" in understanding variation in the dimensions of leadership we are interested in, i.e., our methods and analyses are exploratory and not strictly theoretically driven. We draw on the same database of 1212 ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the eHRAF database [@naroll_proposed_1967]. The *leadershipdata* database was designed to capture a wide sample of the ethnographic record of leadership across social contexts and was built using an advanced search including 16 OCM codes related to leadership seven key words describing leaders or followers. For the current study, two authors coded each text record for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leaders or followers may receive. See @garfield_evolutionary_2019 for additional details on the ethnographic sample and methodology.
+Whereas @garfield_evolutionary_2019, documented supporting evidence for measures of leadership in reference to influential theoretical models, our goals here are to let the ethnographic record "speak for itself" in understanding variation in the dimensions of leadership we are interested in, i.e., our methods and analyses are exploratory and not strictly theoretically driven. We draw on the same database of `r nrow(leader_text2)` ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the eHRAF database [@naroll_proposed_1967]. The latter comprises over `r trunc(sum(dfwc$`N Pages eHRAF`)/1000)`K pages of digitized text.
 
-The operationalized qualities and functions (See Table \@ref(tab:qualfuncvars)) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, while also creating new variables and operationalizations for additional qualities and functions encountered. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Table \@ref(tab:qualfuncvars). ZG then followed the same process of coding the entire sample of 1212 text records for the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` operationalized variables, as well as a measure of group structure coded as: *residential subgroup*, which includes informal groups of co-residents, age-based groups, performance groups; *kin group*, which includes lineages, phraties, and other kin-based organizations; *economic group*, which includes subsistence groups, market groups, and other groups with primarily economic goals; *military group*, which includes all groups related to inter-group conflcit; *religious group*, which includes groups collected for spiritual or supernatural purpose; *political group (community)*, which includes political groups at the level fo the community, i.e., the political leader can potentially directly interact with most community members such as most village headmen, or *political group (supracommunity)*, which includes political groups that encompass multiple residential communities, such as complex chiefdoms, regional political leaders, and kings or state-level leaders. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository (a data frame named *leader_text2*). 
+The *leadershipdata* database was designed to capture a wide sample of the ethnographic record of leadership across social contexts and was built using an advanced search including 16 OCM codes related to leadership seven key words describing leaders or followers. For the current study, two authors coded each text record for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leaders or followers may receive. See @garfield_evolutionary_2019 for additional details on the ethnographic sample and methodology.
+
+The operationalized qualities and functions (See Table \@ref(tab:qualfuncvars)) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all `r nrow(leader_text2)` text records (in a random order) for the operationalized qualities, functions, cost, and benefits, while also creating new variables and operationalizations for additional qualities and functions encountered. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Table \@ref(tab:qualfuncvars). ZG then followed the same process of coding the entire sample of `r nrow(leader_text2)` text records for the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` operationalized variables, as well as a measure of group structure coded as: *residential subgroup*, which includes informal groups of co-residents, age-based groups, performance groups; *kin group*, which includes lineages, phraties, and other kin-based organizations; *economic group*, which includes subsistence groups, market groups, and other groups with primarily economic goals; *military group*, which includes all groups related to inter-group conflcit; *religious group*, which includes groups collected for spiritual or supernatural purpose; *political group (community)*, which includes political groups at the level fo the community, i.e., the political leader can potentially directly interact with most community members such as most village headmen, or *political group (supracommunity)*, which includes political groups that encompass multiple residential communities, such as complex chiefdoms, regional political leaders, and kings or state-level leaders. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository (a data frame named *leader_text2*). 
 
 <!-- DISCUSS IRR. -->
 
@@ -301,7 +303,7 @@ mm_coauthorSUM <- summary(mm_coauthor)
 mm_coauthorP <- mm_coauthorSUM$coefficients['female_coauthorTRUE', 'Pr(>|z|)']
 ```
 
-We explored whether document features, such as date of publication and gender of authors, influenced reporting of leader functions and qualities. There were `r tab_author_gender['male']` male authors, `r tab_author_gender['female']` females authors, and `r tab_author_gender['unkown']` authors whose gender we could not determine; some of these authors were co-authors. We then tested if text records with a female author or co-author were more likely to discuss female leaders. Of the `r sum(tab_coauthor['FALSE',])` text records with no female co-author, `r tab_coauthor['FALSE','yes']` (`r 100*signif(tab_coauthor['FALSE','yes']/sum(tab_coauthor['FALSE',]),2)`%) reported female leadership. Of the `r sum(tab_coauthor['TRUE',])` text records with female co-author, on the other hand, `r tab_coauthor['TRUE','yes']` (`r 100*signif(tab_coauthor['TRUE','yes']/sum(tab_coauthor['TRUE',]),2)`%) reported female leadership, suggesting that female ethnographers were more likely to report female leaders. However, after accounting for the non-independence of text records (i.e., multiple records from the same document) using a logistic mixed effects regression model, we found that although there was a positive effect of co-author gender on reporting female leadership (OR = `r signif(mm_coauthorOR, 2)`), it was not statistically significant (p = `r signif(mm_coauthorP, 2)`). 
+We explored whether document features, such as date of publication and gender of authors, influenced reporting of leader functions and qualities. There were `r tab_author_gender['male']` male authors, `r tab_author_gender['female']` females authors, and `r tab_author_gender['unkown']` authors whose gender we could not determine, some of which were co-authors. We then tested if text records with a female author or co-author were more likely to discuss female leaders. Of the `r sum(tab_coauthor['FALSE',])` text records with no female author or co-author, `r tab_coauthor['FALSE','yes']` (`r 100*signif(tab_coauthor['FALSE','yes']/sum(tab_coauthor['FALSE',]),2)`%) reported female leadership. Of the `r sum(tab_coauthor['TRUE',])` text records with a female author or co-author, `r tab_coauthor['TRUE','yes']` (`r 100*signif(tab_coauthor['TRUE','yes']/sum(tab_coauthor['TRUE',]),2)`%) reported female leadership, suggesting that female ethnographers were more likely to report female leaders. After accounting for the non-independence of text records (i.e., multiple records from the same document) using a logistic mixed effects regression model, however, we found that although there was a positive effect of co-author gender on reporting female leadership (OR = `r signif(mm_coauthorOR, 2)`), it was not statistically significant (p = `r signif(mm_coauthorP, 2)`).
 
 # Discussion
 
