--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -122,9 +122,9 @@ In sum, we seek to empirically and systematically accomplish the following four 
 
 ## Ethnographic sample and coding
 
-We estimate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (doi.org/10.5281/zenodo.2541999), from which @garfield_evolutionary_2019 "tested" three theoretical models against the ethnographic record. The electronic Human Relations Area Files (eHRAF) is a digital collection of ethnographies, subject-coded at teh paragraph level following a the Outline of Cultural Materials (OCM) coding scheme. The eHRAF is a subset of the larger HRAF and is continually growing in scope. 
+We estimate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (https://doi.org/10.5281/zenodo.2541999), from which @garfield_evolutionary_2019 "tested" three theoretical models against the ethnographic record. The electronic Human Relations Area Files (eHRAF) is a digital collection of ethnographies, subject-coded at teh paragraph level following a the Outline of Cultural Materials (OCM) coding scheme. The eHRAF is a subset of the larger HRAF and is continually growing in scope. 
 
-Whereas @garfield_evolutionary_2019, documented supporting evidence for measures of leadership in reference to influential theoretical models, our goals here are to let the ethnographic record "speak for itself" in understanding variation in the dimensions of leadership we are interested in, i.e., our methods and analyses are exploratory and not strictly theoretically driven. We draw on the same database of `r nrow(leader_text2)` ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the eHRAF database [@naroll_proposed_1967]. The latter comprises over `r trunc(sum(dfwc$`N Pages eHRAF`)/1000)`K pages of digitized text.
+Whereas @garfield_evolutionary_2019, documented supporting evidence for measures of leadership in reference to influential theoretical models, our goals here are to let the ethnographic record "speak for itself" in understanding variation in the dimensions of leadership we are interested in, i.e., our methods and analyses are exploratory and not strictly theoretically driven. We draw on the same database of `r nrow(leader_text2)` ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the eHRAF database [@naroll_proposed_1967]. The PSF aims to mitigate Galton's problem by randomly sampling of one culture with high quality ethographic coverage from each of 60 culture regions. It comprises over `r trunc(sum(dfwc['N Pages eHRAF'])/1000)`K pages of digitized text.
 
 The *leadershipdata* database was designed to capture a wide sample of the ethnographic record of leadership across social contexts and was built using an advanced search including 16 OCM codes related to leadership seven key words describing leaders or followers. For the current study, two authors coded each text record for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leaders or followers may receive. See @garfield_evolutionary_2019 for additional details on the ethnographic sample and methodology.
 
@@ -174,8 +174,13 @@ All analyses were conducted with `r R.version.string`.
 
 # Results
 
-The geographic distribution of the cultures in our sample is displayed in Figure \@ref(fig:geographic), with cultures labeled by mode of subsistence and represented by a symbol proportional to the number of documents that provide ethnographic texts for that culture. The `r nrow(leader_text2)` text records from `r length(unique(leadershipdata::documents$d_ID))` unique documents describing `r length(unique(leader_text2$d_culture))` cultures were generally short, ranging from `r textstats$min` to `r textstats$max` words, with a median word count of `r textstats$median`, a mean of `r textstats$mean`, and standard deviation of `r textstats$sd`. Of the `r nrow(leader_text2)` text records, `r final_record_count` had evidence for at least one variable in the study.
+The geographic distribution of the cultures in our sample is displayed in Figure \@ref(fig:geographic), with cultures labeled by mode of subsistence and represented by a symbol proportional to the number of documents that provided ethnographic texts for that culture. The `r nrow(leader_text2)` text records from `r length(unique(leadershipdata::documents$d_ID))` unique documents describing `r length(unique(leader_text2$d_culture))` cultures were generally short, ranging from `r textstats$min` to `r textstats$max` words, with a median word count of `r textstats$median`, a mean of `r textstats$mean`, and standard deviation of `r textstats$sd`. Of the `r nrow(leader_text2)` text records, `r final_record_count` had evidence for at least one variable in the study.
 
+```{r corpus}
+cor_pages_tr <- cor.test(~number_leader_records + `N Pages eHRAF`, dfwc)
+```
+
+There was a weak positive relationship between the number of leader text records we retrieved from each culture and the total number of pages of ethnography for each culture in eHRAF (r = `r signif(cor_pages_tr$estimate, 2)`, p = `r signif(cor_pages_tr$p.value, 2)`). A loess regression suggested that the number of records initially increased with the total number of pages of ethnography, plateauing at about 35 records around 4500 pages (see Figure \@ref(fig:eHRAFpages)).
 
 ```{r geographic, fig.width=15, fig.cap="The geographical distributions of cultures in this analysis. Symbol shapes indicate mode of subsistence and symbol size indicates the number of documents available for that culture."}
 library(maps)
@@ -398,6 +403,13 @@ The strong support for material and social benefits associated with leadership (
 These exploratory results provide an empirical foundation for future research on leadership across or within diverse cultural settings and across all levels of social organization. Political leadership is common across a broad range of populations, including among relatively small-scale and egalitarian hunter-gatherers. Among hunter-gatherers, however, leaders more frequently emerge within residential subgroups and kin groups. Given the vast majority of human evolutionary history involved subsistence economies characterized by hunting and gathering and greater residential mobility [@lee_cambridge_1999; @marlowe_hunter-gatherers_2005], these results suggest leadership within kin groups and local subgroups likely has a long evolutionary history. Despite a universal male-bias in political leadership at the community level, women are expected to have greater decision-making responsibilities and adopt leadership roles within families and local groups [@brown_her_1985; @garfield_evolutionary_2019; @hagen_leadership_2019; @smith_obstacles_2018; @von_rueden_sex_2018]. 
 
 Contemporary theoretical models of the evolution of leadership often emphasize leaders roles in organizing collective action and in managing between group conflicts [@hooper_theory_2010; @pietraszewski_evolution_2019; @price_evolution_2014]. Results here do support the important functions of leaders in organizing cooperation and facilitating social functions -- services which provide direct benefits to the group. However, the ubiquity of conflict resolution by leaders across social contexts and cultures calls for greater attention to the roles of leaders of all types in managing intra-group conflict between group members -- services tailored to provide direct benefits to a few individuals and more indirect group benefits [@glowacki_leadership_2015; @wiessner_collective_2019; @pupu_challenges_2018; @hagen_leadership_2019].
+
+# Supplementary information
+
+```{r eHRAFpages, fig.height=6, fig.cap="Scatterplot of the number of leadership text records versus the total number of pages of ethnography in the eHRAF. Each dot is one culture. Line fit by loess regression."}
+plot_pages_tr
+```
+
 
 # References
 
